Agregando campos en las consulas y en los registros

--- a/ProyectoFinal-Aplicada2/Menu/MenuConsultas.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuConsultas.razor
@@ -15,7 +15,7 @@
         <div class="card-body">
             <h5 class="card-title">Consulta de Categorias</h5>
             <p class="card-text">Consulta para acceder a las Categorias de productos creadas.</p>
-            <a href="" class="btn btn-primary">Ir a Consulta de Productos</a>
+            <a href="ConsultaTipoCategorias" class="btn btn-primary">Ir a Consulta de Productos</a>
         </div>
     </div>
 
@@ -58,9 +58,9 @@
     <div class="card" style="width: 18rem;">
         <img src="/Iconos/ClientesC_Icon.png" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Consulta de Clienets</h5>
+            <h5 class="card-title">Consulta de Clientes</h5>
             <p class="card-text">Consulta para acceder a los Clientes creados.</p>
-            <a href="" class="btn btn-primary">Ir a Consulta de Clientes</a>
+            <a href="ConsultaClientes" class="btn btn-primary">Ir a Consulta de Clientes</a>
         </div>
     </div>
 
