--- a/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
@@ -59,7 +59,7 @@
     <div class="card" style="width: 18rem;">
         <img src="/Iconos/supervisor_people_man_you_2840.png" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Registro de Clienets</h5>
+            <h5 class="card-title">Registro de Clientes</h5>
             <p class="card-text">Registro para agregar, modificar y eliminar Clientes.</p>
             <a href="Clientes/0" class="btn btn-primary">Ir a Registro de Clientes</a>
         </div>
