--- a/ProyectoFinal-Aplicada2/Menu/MenuConsultas.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuConsultas.razor
@@ -10,12 +10,13 @@
             <a href="ConsultaUsuarios" class="btn btn-primary">Ir a Consulta de Usuarios</a>
         </div>
     </div>
+
     <div class="card" style="width: 18rem;">
         <img src="/Iconos/CategoriasC_Icon.png" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Consulta de Categorias</h5>
-            <p class="card-text">Consulta para acceder a las Categorias de productos creadas.</p>
-            <a href="ConsultaTipoCategorias" class="btn btn-primary">Ir a Consulta de Productos</a>
+            <h5 class="card-title">Consulta de Categorías</h5>
+            <p class="card-text">Consulta para acceder a las Categorías de productos creadas.</p>
+            <a href="ConsultaCategorias" class="btn btn-primary">Ir a Consulta de Categorías</a>
         </div>
     </div>
 
