--- a/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
@@ -14,9 +14,9 @@
     <div class="card" style="width: 18rem;">
         <img src="/Iconos/Boxes-Self_35539.png" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Registro de Categorias</h5>
-            <p class="card-text">Registro para agregar, modificar y eliminar Categorias de Productos.</p>
-            <a href="Categorias/0" class="btn btn-primary">Ir a Registro de Productos</a>
+            <h5 class="card-title">Registro de Categorías</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Categorías de Productos.</p>
+            <a href="Categorias/0" class="btn btn-primary">Ir a Registro de Categorías</a>
         </div>
     </div>
 
@@ -76,29 +76,6 @@
 </div>
 <br />
 <br />
-
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <img src="/Imagenes/Pagos.png" class="card-img-top" alt="...">
-                <h5 class="card-title">Registro de Clientes</h5>
-                <p class="card-text">Registro para agregar, modificar y eliminar Clientes.</p>
-                <a href="Clientes" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card" style="width: 18rem;">
-            <img src="/Imagenes/Ventas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Registro de Tipos de productos</h5>
-                <p class="card-text">Registro para agregar, modificar y eliminar Tipos de productos.</p>
-                <a href="TipoProductos" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
-        </div>
-    </div>
-</div>
 
 @code {
 
