--- a/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
@@ -260,7 +260,7 @@
                         case 7:
 
                             listado = productoscontrollers.GetList(p => p.CategoriaProducto.Contains(Criterio));
-                            lista = listado;
+                            Lista = listado;
                             break;
                     }
                 }
