--- a/ProyectoFinal-Aplicada2/Pages/ConsultaCategorias.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaCategorias.razor
@@ -1,5 +1,5 @@
-﻿@page "/ConsultaTipoCategorias"
-@page "/ConsultaTipoCategorias/{I:int}"
+﻿@page "/ConsultaCategorias"
+@page "/ConsultaCategorias/{I:int}"
 
 
 @inject AuthenticationStateProvider AuthenticationStateProvider
@@ -26,7 +26,7 @@
 @if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
 {
     <h3>Consulta de Categorías</h3>
-    
+
     <div class="form-row">
 
 
@@ -42,14 +42,14 @@
             <select class="form-control" @onclick="Filtrar" @bind="filtro">
                 <option value="0">Todos</option>
                 <option value="1">Id</option>
-                <option value="2">Nombre de la categoría</option>                  
+                <option value="2">Nombre de la categoría</option>
             </select>
         </div>
 
     </div>
     <br />
 
-    @if (ListaTipoProductos == null)
+    @if (ListaCategoria == null)
     {
         <p>No hay datos que mostrar</p>
         return;
@@ -70,8 +70,8 @@
                 {
                     <tr>
                         <td>@item.CategoriaId</td>
-                        <td>@itemNombreCategoria.</td>
-                     
+                        <td>@item.NombreCategoria</td>
+
                         <td><a class="btn btn-outline-info" href="Categorias/@item.CategoriaId">Ver</a></td>
                     </tr>
                 }
@@ -128,10 +128,10 @@
             Contador = 0;
         }
 
-        ListaTipoProductos = contexto.Categorias
-            .Skip(Contador * paginacion.CantidadMostrar)
-            .Take(paginacion.CantidadMostrar)
-            .ToList();
+        ListaCategoria = contexto.Categorias
+        .Skip(Contador * paginacion.CantidadMostrar)
+        .Take(paginacion.CantidadMostrar)
+        .ToList();
     }
 
     private string filtro;
@@ -156,7 +156,7 @@
                         conteo = contexto.Categorias.Count();
                         totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
                         ListaCategoria = categoriascontrollers.GetList(A => true);
-                        this.ListaTipoProductos = contexto.Categorias.Take(paginacion.CantidadMostrar).ToList();
+                        this.ListaCategoria = contexto.Categorias.Take(paginacion.CantidadMostrar).ToList();
                         break;
                     //Int
                     case 1:
@@ -165,15 +165,15 @@
                         {
                             id = Convert.ToInt32(Criterio);
                             ListaCategoria = categoriascontrollers.GetList(p => p.CategoriaId == id);
-                            ListaTipoProductos = listado;
+                            ListaCategoria = listado;
                         }
                         break;
                     //Categoria
                     case 2:
                         listado = categoriascontrollers.GetList(p => p.NombreCategoria.Contains(Criterio));
-                        ListaTipoProductos = listado;
+                        ListaCategoria = listado;
                         break;
-                 
+
                 }
             }
             else
